--- a/README
+++ b/README
@@ -1,4 +1,23 @@
-# Interspire Addons
-**Addons for Interspire Email Marketer**
+# Addons for Interspire Email Marketer (IEM) created by Maborak Technologies
 
-Test
+Increase the performance and Delivery from Interspire Email Marketer.
+
+------------
+
+
+## Addons
+
+- Multiple MTA + IP Monitor
+- Multithread
+- Feedback Loops
+- Spining
+- Advanced Backup/Export
+- Social Networks
+- GeoLocation Statistics
+- ISP Analysis
+- SMS Campaigns
+- Bounce Network
+- Mutilanguage
+
+
+More details: http://www.maborak.com/
